# fieldos-engine

./: .gitignore  CODEBASE_REPORT.md  CODE_AUDIT.md  DATABASE_INTEGRATION_PLAN.md  GAME_SIMULATION_PLAN.md  GUIDE.md  README.md  pyproject.toml  walkthrough.md
docker/: Dockerfile
fieldos_engine/: teams.py
fieldos_engine/ai/: chat.py  opponent_model.py  play_advisor.py
fieldos_engine/api/: advisor_routes.py  main.py  routes.py  schemas.py
fieldos_engine/core/: ids.py  models.py  registry.py  validation.py
fieldos_engine/data/demo/: formations.json  motion_plays.json  players.json  plays.json  routes.json  rules.json  scenarios.json  trick_plays.json
fieldos_engine/rl/: env.py  evaluate.py  game_env.py  play_generator.py  policy.py  train.py
fieldos_engine/sim/: coverage.py  engine.py  field.py  game_simulator.py  metrics.py  motion.py  outcome.py  trace.py
fieldos_engine/stats/: __init__.py  report_generator.py  scouting.py
fieldos_engine/utils/: viz.py
models/: my_policy.pkl  policy.json  policy.pkl
scripts/: demo.sh  full_report.py  generate_all_visualizations.py  quick_demo.sh  run_dev.sh  run_game_simulation.py  seed_demo_data.py  train_policy.py  visualize_new_plays.py  visualize_play.py
tests/: test_api_smoke.py  test_rl_smoke.py  test_sim_determinism.py  test_validation.py
